@@ -37,10 +37,10 @@
     </developers>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <jacoco.percentage.instruction>0.40</jacoco.percentage.instruction>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mongodbDriver.version>[4.5.1,]</mongodbDriver.version>
+        <mongodbDriver.version>[4.1.0,)</mongodbDriver.version>
     </properties>
 
     <build>
@@ -105,9 +105,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <compilerArgs>--add-modules java.base</compilerArgs>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -370,31 +369,31 @@
     </dependencies>
 
 
-    <!--    <repositories>-->
-    <!--        <repository>-->
-    <!--            <id>sonatype-nexus-snapshots</id>-->
-    <!--            <name>Sonatype Nexus Snapshots</name>-->
-    <!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-    <!--            <releases>-->
-    <!--                <enabled>false</enabled>-->
-    <!--            </releases>-->
-    <!--            <snapshots>-->
-    <!--                <enabled>true</enabled>-->
-    <!--            </snapshots>-->
-    <!--        </repository>-->
-    <!--        <repository>-->
-    <!--            <id>sonatype-nexus-staging</id>-->
-    <!--            <name>Sonatype Nexus Release Repository</name>-->
-    <!--            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
-    <!--            <releases>-->
-    <!--                <enabled>true</enabled>-->
-    <!--            </releases>-->
-    <!--            <snapshots>-->
-    <!--                <enabled>false</enabled>-->
-    <!--            </snapshots>-->
-    <!--        </repository>-->
+    <repositories>
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Sonatype Nexus Release Repository</name>
+            <url>https://oss.sonatype.orgservice/local/staging/deploy/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
 
-    <!--    </repositories>-->
+    </repositories>
 
     <distributionManagement>
         <snapshotRepository>
